# ombt-orchestrator

./: .gitignore  MANIFEST.in  README.md  ansible.cfg  campaign.py  cli.py  conf.yaml  main.py  qpid_dispatchgen.py  requirements.txt  setup.cfg  tasks.py  test.py
ansible/: site.yml  test_case_1.yml
docker/: Dockerfile-qdrouterd  Dockerfile-qdrouterd-1.0.0  Dockerfile-qdrouterd-gui-1.0.0  Dockerfile-qpid-dispatch-gui-1.0.0  Makefile  README.md  qdrouterd.conf
docker/0.8.0/: Dockerfile-qdrouterd-collectd  Dockerfile-qdrouterd-gui
docker/1.0.0/: Dockerfile-qdrouterd  Dockerfile-qdrouterd-collectd  Dockerfile-qdrouterd-gui
docker/1.0.1/: Dockerfile-qdrouterd  Dockerfile-qdrouterd-collectd  Dockerfile-qdrouterd-gui
docker/1.3.0/: Dockerfile-qdrouterd  Dockerfile-qdrouterd-collectd  Dockerfile-qdrouterd-gui
docker/DISPATCH-957/: Dockerfile-qdrouterd  Dockerfile-qdrouterd-collectd  Dockerfile-qdrouterd-gui
docker/master/: Dockerfile-qdrouterd  Dockerfile-qdrouterd-collectd  Dockerfile-qdrouterd-gui
notebooks/: README.md  requirements.txt  test_case_1-incremental.ipynb  test_case_1.ipynb
orchestrator/: campaign.py  cli.py  constants.py  ombt.py  qpid_dispatchgen.py  tasks.py
orchestrator/ansible/: site.yml  test_case.yml
synthetic/: .gitignore  README.md  campaign.py  cli.py  conf.yaml  main.py  requirements.txt  tasks.py
synthetic/ansible/: destroy.yml  hosts  ombt.yml  prepare.yml  qpidd.yml  rabbitmq.yml  site.yml  test-case-1.yml  test_case_1.yml
synthetic/confs/: g5k-qdr.yaml  g5k-qpidd.yaml  g5k-rabbitmq.yaml  vagrant-qdr.yaml  vagrant-qpidd.yaml  (+1 more)
(+96 files in other folders)
