[metadata]
name = ombt-orchestrator
version = 1.0.0
description = Oslo messaging benchmarking orchestrator
keywords = benchmark, oslo messaging, RPC
license_file = LICENSE.txt
url = https://github.com/msimonin/ombt-orchestrator/
author = Matthieu Simonin
author_email = matthieu.simonin@inria.fr
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Reports = https://github.com/msimonin/ombt-orchestrator/issues
    Source = https://github.com/msimonin/ombt-orchestrator/
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: System :: Networking
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7

[options]
include_package_data = True
packages = find:
setup_requires =
    setuptools>=39.0.1
    wheel>=0.31.0
install_requires =
    PyYAML
    pathlib2; python_version<"3"
    networkx==2.1
    click>=6.7,<7
    enoslib>=1.0.1

[options.packages.find]
exclude =
    notebooks

[options.entry_points]
console_scripts =
    oo = orchestrator.cli:cli

[bdist_wheel]
python-tag = py27
